[package]
name = "rustexp"
version = "0.1.0"
authors = ["Louis Pilfold <louis@lpil.uk>"]
edition = "2021"

[dependencies]
fancy-regex = "0.11"
regex = "1.7"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Event",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "Window",
] }

[profile.release]
lto = true
opt-level = 's'
