[package]
name = "rustexp"
version = "0.1.0"
edition = "2021"
authors = ["Louis Pilfold <louis@lpil.uk>"]
publish = false

[dependencies]
fancy-regex = "0.16"
regex = "1.10.2"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Event",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "Window",
] }

[profile.release]
lto = true
opt-level = 's'
